--- a/app/galeri/galeri.module.css
+++ b/app/galeri/galeri.module.css
@@ -69,6 +69,19 @@
   margin-right: auto;
 }
 
+.subSectionTitle {
+  font-size: 1.4rem;
+  color: var(--secondary-color, #333);
+  margin-bottom: 1rem;
+  margin-top: 2rem;
+  text-align: left;
+  border-bottom: 1px solid var(--primary-color, #007bff);
+  padding-bottom: 0.3rem;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .noContent {
   text-align: center;
   color: #999;
