--- a/components/Footer.module.css
+++ b/components/Footer.module.css
@@ -1,14 +1,14 @@
 .footer {
   background-color: var(--secondary-color);
   color: #ccc;
-  padding-top: 4rem;
+  padding-top: 1rem;
 }
 
 .container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 2rem;
-  padding-bottom: 3rem;
+  gap: 1rem;
+  padding-bottom: 2rem;
 }
 
 .column {
@@ -70,6 +70,13 @@
 .socialMedia a:hover {
   color: var(--primary-color);
   transform: translateY(-3px);
+}
+
+.mapContainer {
+  width: 100%;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 .bottomBar {
